--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "pg": "^8.15.0",
     "pg-hstore": "^2.3.4",
