--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.8.0",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "pg": "^8.15.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7"
   }
 }
