--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "personal-website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "clean-dist": "rm -rf public/dist && mkdir public/dist",
+    "minify-css": "cleancss -o public/dist/style.min.css public/css/style.css",
+    "minify-js-theme": "terser public/js/theme.js -o public/dist/theme.min.js -c -m",
+    "minify-js-nav": "terser public/js/nav.js -o public/dist/nav.min.js -c -m",
+    "minify-js-consent": "terser public/js/consent.js -o public/dist/consent.min.js -c -m",
+    "minify-js-particles": "terser public/js/particles-init.js -o public/dist/particles-init.min.js -c -m",
+    "build": "npm run clean-dist && npm run minify-css && npm run minify-js-theme && npm run minify-js-nav && npm run minify-js-consent && npm run minify-js-particles"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +32,9 @@
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "clean-css-cli": "^5.6.3",
+    "terser": "^5.39.0"
   }
 }
