--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "clean-dist": "rm -rf public/dist && mkdir public/dist",
-    "minify-css": "cleancss -o public/dist/style.min.css public/css/style.css",
-    "minify-js-theme": "terser public/js/theme.js -o public/dist/theme.min.js -c -m",
-    "minify-js-nav": "terser public/js/nav.js -o public/dist/nav.min.js -c -m",
-    "minify-js-consent": "terser public/js/consent.js -o public/dist/consent.min.js -c -m",
-    "minify-js-particles": "terser public/js/particles-init.js -o public/dist/particles-init.min.js -c -m",
+    "minify-css": "npx cleancss -o public/dist/style.min.css public/css/style.css",
+    "minify-js-theme": "npx terser public/js/theme.js -o public/dist/theme.min.js -c -m",
+    "minify-js-nav": "npx terser public/js/nav.js -o public/dist/nav.min.js -c -m",
+    "minify-js-consent": "npx terser public/js/consent.js -o public/dist/consent.min.js -c -m",
+    "minify-js-particles": "npx terser public/js/particles-init.js -o public/dist/particles-init.min.js -c -m",
     "build": "npm run clean-dist && npm run minify-css && npm run minify-js-theme && npm run minify-js-nav && npm run minify-js-consent && npm run minify-js-particles"
   },
   "author": "",
