--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "clean-css-cli": "^5.6.3",
+    "terser": "^5.31.3" 
   },
   "devDependencies": {
-    "clean-css-cli": "^5.6.3",
-    "terser": "^5.39.0"
   }
 }
